change navbar to fixed-top and adjust padding to body so navbar don't overlap content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,8 @@
 
 body {
     font-family: var(--primary-font);
+    padding-top: 57.64px;
+    /*Add padding to push body below navbar*/
 }
 
 h1,
